--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     <button class="tablink" onclick="openPage('About', this, 'black')">About</button>
 
     <div id="Home" class="tabcontent">
-        <!--<img class="homebckgrn" src="img/home.jpg">-->
-        <p class="title">Andrea Bragetta photography</p>
+        <img class="homebckgrn" src="img/logo.png">
+
     </div>
 
     <div id="Portraits" class="tabcontent">
